BaSP-w03: header and sidebar respnsive

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -17,19 +17,23 @@
   <title>Trackgenix</title>
 </head>
 <body>
-	<header>
-    <p><i class="fa-solid fa-bars index-icon"></i></p>
-    <a href="#">Trackgenix</a>
-    <ul>
-      <li><a href="#">About Trackgenix</a></li>
-      <li><a href="#">Functions</a></li>
-      <li><a href="#">Info</a></li>
-      <li><a href="#">History</a></li>
-      <li><a href="#">Products & Services</a></li>
-    </ul>
+	<header class="header">
+    <div>
+      <p><i class="fa-solid fa-bars index-icon"></i></p>
+      <a href="#" class="title-index">Trackgenix</a>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">About Trackgenix</a></li>
+        <li><a href="#">Functions</a></li>
+        <li><a href="#">Info</a></li>
+        <li><a href="#">History</a></li>
+        <li><a href="#">Products & Services</a></li>
+      </ul>
+    </nav>
 	</header>
-	<aside>
-		<div>
+	<aside class="aside">
+		<div class="aside-links">
 			<input type="search" placeholder="Search">
 			<p>Menú</p>
 			<ul>
@@ -51,7 +55,7 @@
 				</li>
 			</ul>
 		</div>
-		<div>
+		<div class="aside-contact">
 			<ul>
 				<li>
 					Get in Touch
@@ -72,7 +76,7 @@
 	</aside>
 	<main>
 		<section id="primary-section">
-      <article>
+      <div>
         <h1>Trackgenix</h1>
         <p>
           Make it easy to record hours worked on each project
@@ -85,115 +89,143 @@
           Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         </p>
         <a href="#">LEARN MORE</a>
-      </article>
-			<div>
-				<img src="assets/img-index.png" alt="trackgenix-index">
-			</div>
+      </div>
+      <img src="assets/img-index.png" alt="trackgenix-index">
 		</section> 
 		<section class="about">
 			<h2>About Trackgenix</h2>
-			<article>
-				<img src="assets/idea.png" alt="idea">
-				<h3>Productivity booster</h3>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-				</p>
-			</article>
-			<article>
-				<img src="assets/profit-report.png" alt="profit-reports">
-				<h3>Work traceability</h3>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-				</p>
-			</article>
-			<article>
-				<img src="assets/user.png" alt="user">
-				<h3>Leadership and team management</h3>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-				</p>      
-			</article>
-			<article>
-				<img src="assets/like.png" alt="like">
-				<h3>Decision making</h3>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-				</p>
-			</article>
+      <div class="container">
+        <article>
+          <img src="assets/idea.png" alt="idea">
+          <div>
+          <h3>Productivity booster</h3>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+          </p>
+        </div>
+        </article>
+        <article>
+          <img src="assets/profit-report.png" alt="profit-reports">
+          <div>
+            <h3>Work traceability</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>
+          </div>
+        </article>
+        <article>
+          <img src="assets/user.png" alt="user">
+          <div>
+            <h3>Leadership and team management</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>      
+          </div>
+        </article>
+        <article>
+          <img src="assets/like.png" alt="like">
+          <div>
+            <h3>Decision making</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>
+          </div>
+        </article>
+      </div>
 		</section>
 		<section class="functions"> 
 				<h2>Functions</h2>
-			<article>
-				<img src="assets/clock.png" alt="clock">
-				<h3>Record of hours</h3>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-				</p>
-			</article>
-			<article>
-				<img src="assets/profit-report.png" alt="profit-report">
-				<h3>Reports</h3>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-				</p>      
-			</article>
-			<article>
-				<img src="assets/gear.png" alt="gear">
-				<h3>Resource management</h3>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-				</p>    
-			</article>
-			<article>
-				<img src="assets/roles.png" alt="roles">
-				<h3>Multiple roles</h3>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-				</p>       
-			</article>
+        <div class="container">
+          <article>
+            <img src="assets/clock.png" alt="clock">
+            <div>
+              <h3>Record of hours</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+              </p>
+            </div>
+            </article>
+            <article>
+              <img src="assets/profit-report.png" alt="profit-report">
+              <div>
+                <h3>Reports</h3>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                </p>      
+              </div>
+            </article>
+            <article>
+              <img src="assets/gear.png" alt="gear">
+              <div>
+                <h3>Resource management</h3>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                </p>    
+              </div>
+        </article>
+        <article>
+          <img src="assets/roles.png" alt="roles">
+          <div>
+            <h3>Multiple roles</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>       
+          </div>
+        </article>
+      </div>
 		</section>
-		<section>
+		<section class="information">
 			<h2>Information</h2>
       <form>
-        <label>
-          <p>Name</p>
-          <input type="text" placeholder="text your name">
-        </label>
-        <label>
-          <p>Email</p>
-          <input type="email" placeholder="text your email">
-        </label>
+        <div class="box-information">
+          <div>
+            <label>Name</label>
+            <input type="text" placeholder="text your name">
+          </div>
+          <div>
+            <label>Email</label>
+            <input type="email" placeholder="text your email">
+          </div>
+        </div>
         <div class="contact-area">
           <p>Contact area</p>
-          <label>
+          <div>
             <input type="radio" name="contact-area" value="Human resources" checked/>
-          </label>
-          <label>
+            <label>Human resources</label>
+          </div>
+          <div>
             <input type="radio" name="contact-area" value="Systems"/>
-          </label>
-          <label>
+            <label>Systems</label>
+          </div>
+          <div>
             <input type="radio" name="contact-area" value="Commercialization"/>
-          </label>
+            <label>Commercialization</label>
+          </div>
         </div>
-        <div>
+        <div class="box-message">
           <label>Message</label>
           <textarea name="message" cols="30" rows="10"></textarea>
         </div>
-        <button>Submit</button>
+        <button>Send</button>
       </form>
 		</section>
 		<section class="history">
 			<article>
 				<h2>Our history</h2>
 				<h3>GigaTech Software Solutions SA</h3>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        </p>
 				<p>
 					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
