BaSP-W03: main sections media queries added

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -98,12 +98,12 @@
         <article>
           <img src="assets/idea.png" alt="idea">
           <div>
-          <h3>Productivity booster</h3>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-          </p>
-        </div>
+            <h3>Productivity booster</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>
+          </div>
         </article>
         <article>
           <img src="assets/profit-report.png" alt="profit-reports">
@@ -226,14 +226,14 @@
           Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
           when an unknown printer took a galley of type and scrambled it to make a type specimen book.
         </p>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-					when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-				</p>
 			</article>
 			<article>
-				<p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        </p>
+        <p>
 					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 					Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
 					when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -262,97 +262,101 @@
         standard dummy text ever since the 1500s.
       </p>
 		</section>
-		<section class="products">
-			<div>
-				<h2>Products</h2>
-				<p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        </p>
-				<p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        </p>
-			</div>
-			<div>
-				<ol>
-					<li>
-						<a href="#">Functionalities</a>
-					</li>
-					<li>
-						<a href="#">Downloads</a>
-					</li>
-					<li>
-						<a href="#">Integrations</a>
-					</li>
-					<li>
-						<a href="#">Additional features</a>
-					</li>
-				</ol>
-			</div>
-		</section>
-		<section class="business">
-			<div>
-				<h2>Business</h2>
-				<p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        </p>
-				<p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        </p>
-			</div>
-			<div>
-				<ol>
-					<li>
-						<a href="#">About us</a>
-					</li>
-					<li>
-						<a href="#">Customers</a>
-					</li>
-					<li>
-						<a href="#">Means</a>
-					</li>
-					<li>
-						<a href="#">Blog</a>
-					</li>
-				</ol>
-			</div>
-		</section>
-		<section class="support">
-			<div>
-				<h2>Support</h2>
-				<p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        </p>
-				<p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        </p>
-			</div>
-			<div>
-				<ol>
-					<li>
-						<a href="#">Aid</a>
-					
-					</li>
-					<li>
-						<a href="#">API</a>
-					</li>
-					<li>
-						<a href="#">Contacts</a>
-					</li>
-				</ol>
-			</div>
-		</section>
+    <section class="container-box">
+      <section class="products">
+        <div>
+          <h2>Products</h2>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          </p>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          </p>
+        </div>
+        <div>
+          <ol>
+            <li>
+              <a href="#">Functionalities</a>
+            </li>
+            <li>
+              <a href="#">Downloads</a>
+            </li>
+            <li>
+              <a href="#">Integrations</a>
+            </li>
+            <li>
+              <a href="#">Additional features</a>
+            </li>
+          </ol>
+        </div>
+      </section>
+      <section class="business">
+        <div>
+          <h2>Bussines</h2>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          </p>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          </p>
+        </div>
+        <div>
+          <ol>
+            <li>
+              <a href="#">About us</a>
+            </li>
+            <li>
+              <a href="#">Customers</a>
+            </li>
+            <li>
+              <a href="#">Means</a>
+            </li>
+            <li>
+              <a href="#">Blog</a>
+            </li>
+          </ol>
+        </div>
+      </section>
+      <section class="support">
+        <div>
+          <h2>Support</h2>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          </p>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+          </p>
+        </div>
+        <div>
+          <ol>
+            <li>
+              <a href="#">Aid</a>
+            </li>
+            <li>
+              <a href="#">Tutorials</a>
+            </li>
+            <li>
+              <a href="#">API</a>
+            </li>
+            <li>
+              <a href="#">Contacts</a>
+            </li>
+          </ol>
+        </div>
+      </section>
+    </section> 
 	</main> 
 	<footer class="footer">
     <ul>
