BaSP-W03: final touches made

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -94,7 +94,7 @@
 		</section> 
 		<section class="about">
 			<h2>About Trackgenix</h2>
-      <div class="container">
+      <div class="box-about">
         <article>
           <img src="assets/idea.png" alt="idea">
           <div>
@@ -139,7 +139,7 @@
 		</section>
 		<section class="functions"> 
 				<h2>Functions</h2>
-        <div class="container">
+        <div class="box-functions">
           <article>
             <img src="assets/clock.png" alt="clock">
             <div>
@@ -262,7 +262,7 @@
         standard dummy text ever since the 1500s.
       </p>
 		</section>
-    <section class="container-box">
+    <section class="box-services">
       <section class="products">
         <div>
           <h2>Products</h2>
