BaSP-W04: corrections made to last week CSS and Flexbox

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -19,7 +19,7 @@
 <body>
 	<header class="header">
     <div>
-      <p><i class="fa-solid fa-bars index-icon"></i></p>
+      <i class="fa-solid fa-bars index-icon"></i>
       <a href="#" class="title-index">Trackgenix</a>
     </div>
     <nav>
